# SYGMA-NEX

./: .coverage  .flake8  .gitignore  .gitignore.tokens  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FILES_TO_IGNORE.md  IMPLEMENTATION_GUIDE.md  LICENSE  MARIANDWND.py  PANORAMICA_PROGETTO_SIGMA_NEX.txt  README.md  RELEASE_README_v0.3.5.md  SECURITY.md  TESTING.md  avvia_gui.bat  bandit-detailed-report.json  bandit-final-report.json  bandit-report.json  build_index.py  build_index1.py  cleanup.bat  config.production.yaml  config.yaml  coverage.json  coverage_report.json  debug_test.py  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  faiss.py  main_gui.py  marian_test.py  monitor_ci.py  pyproject.toml  (+8 more)
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  RELEASE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  support_question.md
.github/workflows/: ci.yml  pages.yml  quality.yml  release.yml
data/: Framework_SIGMA.json  Framework_SIGMA1.json  moduli.index  moduli.mapping.json
docs/: DOCUMENTATION_INDEX.md  README.md  api.md  ci-cd-analysis.md  ci-cd-system.md  deployment.md  development.md  installation.md  new_files_documentation.md  testing.md  troubleshooting_global_config.md
docs/api/: cli.md  context.md  retriever.md  runner.md  translation.md
docs/architecture/: overview.md
docs/config/: authentication.md  config.md  security.md
docs/guides/: api-usage.md  cli-guide.md  configuration.md  gui-guide.md  troubleshooting.md
scripts/: cleanup.py  create_weekly_token.py  install_global_config.py  safe_push.bat  safe_push.sh  setup_auth.bat  setup_auth.sh  setup_dev.py  setup_global_unix.sh  setup_global_windows.bat
sigma_nex/: __init__.py  __main__.py  auth.py  cli.py  config.py  data_loader.py  server.py
sigma_nex/core/: context.py  retriever.py  runner.py  translate.py
sigma_nex/gui/: __init__.py  main_gui.py
sigma_nex/utils/: security.py  validation.py
tests/: conftest.py  test_cli.py  test_cli_extended.py  test_config.py  test_dataloader.py  test_retriever.py  test_retriever_realistic.py  test_runner.py  test_runner_realistic.py  test_security.py  test_server.py  test_server_medical.py  test_translate.py  test_validation.py
tests/integration/: __init__.py  test_basic_integration.py  test_cli_auth_integration.py  test_cli_integration.py  test_core_integration.py  test_end_to_end.py  test_server_integration.py
tests/unit/: test_auth_realistic.py  test_cli_realistic.py  test_config_realistic.py  test_context_realistic.py  test_data_loader_realistic.py  test_history_optimization.py  test_install_config_fixed.py  test_main_gui_realistic.py  test_retriever_realistic.py  test_runner_realistic.py  test_security_enhanced.py  test_security_realistic.py  test_server_realistic.py  test_translate_realistic.py  test_translate_simple.py  test_validation_realistic.py
